
2009-07-16	Denis M. Gabaidulin

	* main/Utils/WebMoneyUtils.class.php added.

2009-07-02	Denis M. Gabaidulin

	* main/Base/Comparator.class.php interface added.
	Main/Base/ImmutableObjectComparator.class.php,
	main/Base/SerializedObjectComparator.class.php: classes to compare
	object in different context added.

2009-07-01	Sergey S. Sergeev

	* core/Form/Primitives/PrimitiveHstore.class.php,
	test/core/PrimitiveHstoreTest.class.php, test/misc/DAOTest.class.php,
	core/DB/PgSQL.class.php: reimplemented PrimitiveHstore.

2009-06-29	Sergey S. Sergeev

	* core/Base/Timestamp.class.php, test/core/TimestampTest.class.php: checkdate added.

2009-06-26	Sergey S. Sergeev

	* main/Flow/PartViewer.class.php: PartViewer can't resolve EmptyView.
	
	* meta/classes/MetaConfiguration.class.php, test/misc/DAOTest.class.php,
	test/misc/TestTables.class.php: fixed meta generation for recurcive lazy dependant
	objects.
	
	* core/Cache/Memcached.class.php, core/Cache/PeclMemcached.class.php,
	test/core/MemcachedTest.class.php: fixed multi get operations - Memcached
	compatability with PeclMemcached now.
	
	* core/Logic/LTreeExpression.class.php: ltree logic implemented.

2009-06-23	Sergey S. Sergeev

	* test/misc/DAOTest.class.php: check of PostgreSql type added, thanks to
	Denis Gabaidulin.

2009-06-22	Denis M. Gabaidulin

	* main/Utils/TypesUtils.class.php added.

	* main/Net/Ip/IpUtils.class.php added.

2009-06-16	Sergey S. Sergeev

	* core/Form/Primitive.class.php, core/OSQL/DataType.class.php,
	main/Base/LightMetaProperty.class.php, test/misc/DAOTest.class.php,
	core/Form/Primitives/PrimitiveHstore.class.php, 
	core/Logic/HstoreExpression.class.php, test/core/PrimitiveHstoreTest.class.php, 
	meta/types/PgHstoreType.class.php: new internal type implemented.

2009-05-14	Ivan Y. Khvostishkov

	* main/Utils/DaoSynchronizer.class.php: flexible master-slave data
	transformation and replication tool.

2009-05-13	Ivan Y. Khvostishkov
