@@ -1,4 +1,8 @@
 
+2009-07-20	Denis M. Gabaidulin
+
+	* core/Cache/MemcachedLocker.class.php added.
+
 2009-07-16	Denis M. Gabaidulin
 
 	* main/Utils/WebMoneyUtils.class.php added.
